--- a/options.html
+++ b/options.html
@@ -62,6 +62,7 @@
     </div>
 
     <script src="materialize.min.js"></script>
+    <script src="constants.js"></script>
     <script src="options.js"></script>
 </body>
 </html>
