--- a/popup.html
+++ b/popup.html
@@ -52,6 +52,7 @@
     </div>
 
     <script src="materialize.min.js"></script>
+    <script src="constants.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
