Refactor: organization dir and create readme.md

--- a/list.html
+++ b/list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bookmark Scribe - List</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="statics/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         .bookmark-item h3 { font-size: 1.5rem; margin-top: 0; }
@@ -90,10 +90,10 @@
         </div>
     </div>
 
-    <script src="materialize.min.js"></script>
-    <script src="constants.js"></script> 
-    <script src="csv.js"></script>
-    <script src="csv_import.js"></script>
-    <script src="list.js"></script>
+    <script src="statics/js/materialize.min.js"></script>
+    <script src="statics/js/constants.js"></script> 
+    <script src="statics/js/csv_export.js"></script>
+    <script src="statics/js/csv_import.js"></script>
+    <script src="statics/js/list.js"></script>
 </body>
 </html>
