--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bookmark Scribe - Settings</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="statics/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         .container { padding-bottom: 50px; }
@@ -61,8 +61,8 @@
         </div>
     </div>
 
-    <script src="materialize.min.js"></script>
-    <script src="constants.js"></script>
-    <script src="options.js"></script>
+    <script src="statics/js/materialize.min.js"></script>
+    <script src="statics/js/constants.js"></script>
+    <script src="statics/js/options.js"></script>
 </body>
 </html>
